--- a/docs/UML/classes/dl_case_rule.adoc
+++ b/docs/UML/classes/dl_case_rule.adoc
@@ -1,12 +1,12 @@
-=== DL_CONDITION_RULE Class
+=== DL_CASE_RULE Class
 
 [cols="^1,3,5"]
 |===
 h|*Class*
-2+^h|*DL_CONDITION_RULE*
+2+^h|*DL_CASE_RULE*
 
 h|*Description*
-2+a|A kind of rule consisting of a chain of Condition/action branches.
+2+a|A case rule.
 
 h|*Inherit*
 2+|`DL_RULE`
@@ -17,6 +17,6 @@ h|*Attributes*
 
 h|*1..1 +
 (redefined)*
-|*body*: `DL_CONDITION_CHAIN`
+|*body*: `DL_CASE_GROUP`
 a|The body of the rule.
 |===
